@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-30T08:32:12Z",
-  "count_outdated" : 143,
-  "uniques_outdated" : 99,
-  "count" : 150,
-  "uniques" : 106,
+  "timestamp" : "2022-10-02T08:24:32Z",
+  "count_outdated" : 144,
+  "uniques_outdated" : 100,
+  "count" : 151,
+  "uniques" : 107,
   "clones" : [
-    {
-      "timestamp": "2022-09-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-19T00:00:00Z",
       "count": 1,
@@ -49,6 +42,13 @@
     },
     {
       "timestamp": "2022-09-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-02T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
