@@ -3,11 +3,6 @@
   "uniques": 1,
   "clones": [
     {
-      "timestamp": "2022-09-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-09-19T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -34,6 +29,11 @@
     },
     {
       "timestamp": "2022-09-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
