@@ -1,3 +1,11 @@
+2022-10-02T08:24:32Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3167885088
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 99 143 / 106 150
+* notice: next accum: outdated-unq outdated-all / unq all: 100 144 / 107 151
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-09-18] / [2022-10-02]
+
 2022-09-30T08:32:12Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3157379309
 * notice: last 14d: unq all: 1 7
